fixed long list rides last item not showing well

--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,7 @@ html, body {
   background: grey;
   border-radius: 10px;
 }
+
+.margin-bottom-10 {
+  margin-bottom: 10rem;
+}
